create section in html, declare variable in sass

--- a/sass/Helpers/_variables.scss
+++ b/sass/Helpers/_variables.scss
@@ -7,3 +7,17 @@ $color-white-1: #f3f5f7;
 $color-yellow-0: #ffc750;
 $color-purple-0: #5b38ed;
 $color-green-0: #09917f;
+
+// font-size
+$fs-0: 15px;
+$fs-1: 16px;
+$fs-2: 20px;
+$fs-3: 60px;
+$fs-4: 13px;
+$fs-5: 18px;
+$fs-6: 30px;
+$fs-7: 35px;
+
+// padding
+
+// margin
