--- a/sass/Helpers/_variables.scss
+++ b/sass/Helpers/_variables.scss
@@ -4,20 +4,50 @@ $color-black-1: #1e1e1e;
 $color-black-2: #242629;
 $color-white-0: #fff;
 $color-white-1: #f3f5f7;
+$color-white-2: #e6e6e6;
+$color-white-3: rgba(255, 255, 255, 0.7);
 $color-yellow-0: #ffc750;
-$color-purple-0: #5b38ed;
+$color-purple-0: #7755ff;
+$color-purple-1: #4923e6;
 $color-green-0: #09917f;
+$color-blue-0: #18a0c6;
 
 // font-size
-$fs-0: 15px;
+$fs-0: 14px;
 $fs-1: 16px;
 $fs-2: 20px;
 $fs-3: 60px;
-$fs-4: 13px;
+$fs-4: 12px;
 $fs-5: 18px;
 $fs-6: 30px;
 $fs-7: 35px;
 
+// font-weight
+$fw-0: 300;
+$fw-1: 400;
+$fw-2: 500;
+$fw-3: 600;
+$fw-4: 700;
+
 // padding
+$pd-0: 15px;
+$pd-1: 8px;
+$pd-2: 25px;
+$pd-3: 50px;
+$pd-4: 20px;
+$pd-5: 10px;
+$pd-6: 130px;
+$pd-7: 35px;
 
 // margin
+$mg-0: 40px;
+$mg-1: 30px;
+$mg-2: 10px;
+$mg-3: 20px;
+$mg-4: 5px;
+
+// border-radius
+$border-radius: 10px;
+
+// line-height
+$lh-0: 1.1;
