--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,9 +10,11 @@
 
 // Layouts
 @import "./Layouts/header";
+@import "./Layouts/cover";
 @import "./Layouts/footer";
 
 // Components
+@import "./Components/button";
 
 // Pages
 
