--- a/sass/Helpers/_variables.scss
+++ b/sass/Helpers/_variables.scss
@@ -2,6 +2,7 @@
 $color-black-0: #111518;
 $color-black-1: #1e1e1e;
 $color-black-2: #242629;
+$color-black-3: rgba(0, 0, 0, 0.6);
 $color-white-0: #fff;
 $color-white-1: #f3f5f7;
 $color-white-2: #e6e6e6;
@@ -38,6 +39,7 @@ $pd-4: 20px;
 $pd-5: 10px;
 $pd-6: 130px;
 $pd-7: 35px;
+$pd-8: 40px;
 
 // margin
 $mg-0: 40px;
@@ -45,6 +47,7 @@ $mg-1: 30px;
 $mg-2: 10px;
 $mg-3: 20px;
 $mg-4: 5px;
+$mg-5: 15px;
 
 // border-radius
 $border-radius: 10px;
