--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,8 +10,9 @@
 
 // Layouts
 @import "./Layouts/header";
-@import "./Layouts/cover";
 @import "./Layouts/footer";
+@import "./Layouts/cover";
+@import "./Layouts/commercial";
 
 // Components
 @import "./Components/button";
