--- a/sass/Layouts/_cover.scss
+++ b/sass/Layouts/_cover.scss
@@ -4,6 +4,7 @@
   background-color: $color-black-0;
   .cover__content {
     padding-top: $pd-3;
+    position: relative;
     .cover__top {
       display: flex;
       width: 100%;
@@ -32,6 +33,44 @@
         padding-left: $pd-2;
         img {
           width: 620px;
+        }
+      }
+    }
+    .cover__bottom {
+      width: 100%;
+      padding: $pd-8;
+      border-radius: 15px;
+      background-color: $color-black-3;
+      backdrop-filter: blur(40px) brightness(200%);
+      position: absolute;
+      bottom: 30px;
+      .cover__block {
+        display: flex;
+        justify-content: space-between;
+        .cover__item {
+          display: flex;
+          align-items: center;
+          .cover__svg {
+            margin-right: $mg-5;
+            svg {
+              fill: $color-white-0;
+            }
+          }
+          .cover__benefit {
+            font-family: "Poppins", sans-serif;
+            h6 {
+              color: $color-white-0;
+              margin-bottom: $mg-2 - 3;
+              font-size: $fs-1;
+              font-weight: $fw-3;
+            }
+            p {
+              color: $color-white-3;
+              margin-bottom: 0;
+              font-size: $fs-4 + 1;
+              font-weight: $fw-3;
+            }
+          }
         }
       }
     }
