--- a/sass/Layouts/_commercial.scss
+++ b/sass/Layouts/_commercial.scss
@@ -1,5 +1,5 @@
 .commercial {
-  background-color: $color-black-0;
+  background-color: $color-white-1;
   padding: $pd-3 0 $pd-2;
   .commercial__list {
     display: flex;
