--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,9 +13,11 @@
 @import "./Layouts/footer";
 @import "./Layouts/cover";
 @import "./Layouts/commercial";
+@import "./Layouts/bestseller";
 
 // Components
 @import "./Components/button";
+@import "./Components/card";
 
 // Pages
 
