--- a/sass/Helpers/_variables.scss
+++ b/sass/Helpers/_variables.scss
@@ -7,11 +7,14 @@ $color-white-0: #fff;
 $color-white-1: #f3f5f7;
 $color-white-2: #e6e6e6;
 $color-white-3: rgba(255, 255, 255, 0.7);
+$color-gray-0: #999;
 $color-yellow-0: #ffc750;
 $color-purple-0: #7755ff;
 $color-purple-1: #4923e6;
 $color-green-0: #09917f;
-$color-blue-0: #18a0c6;
+$color-blue-0: #1aaed7;
+$color-blue-1: #18a0c6;
+$color-red-0: #f77066;
 
 // font-size
 $fs-0: 14px;
@@ -50,7 +53,8 @@ $mg-4: 5px;
 $mg-5: 15px;
 
 // border-radius
-$border-radius: 10px;
+$border-radius-0: 10px;
+$border-radius-1: 5px;
 
 // line-height
 $lh-0: 1.1;
