--- a/sass/Layouts/_header.scss
+++ b/sass/Layouts/_header.scss
@@ -22,7 +22,7 @@ header {
               padding-bottom: 0;
               transition: 0.3s;
               &:hover {
-                color: $color-purple-0;
+                color: $color-blue-0;
               }
             }
           }
@@ -34,8 +34,8 @@ header {
             width: 90%;
             border: 2px solid $color-white-3;
             border-right: none;
-            border-top-left-radius: $border-radius;
-            border-bottom-left-radius: $border-radius;
+            border-top-left-radius: $border-radius-0;
+            border-bottom-left-radius: $border-radius-0;
             background-color: transparent;
             padding: $pd-1 $pd-4;
             color: $color-white-0;
@@ -52,9 +52,9 @@ header {
             width: 13%;
             border: 2px solid $color-white-3;
             border-left: none;
-            border-top-right-radius: $border-radius;
-            border-bottom-right-radius: $border-radius;
-            background-color: $color-purple-1;
+            border-top-right-radius: $border-radius-0;
+            border-bottom-right-radius: $border-radius-0;
+            background-color: $color-blue-1;
             i {
               color: $color-white-1;
             }
@@ -69,7 +69,7 @@ header {
             text-decoration: none;
             transition: 0.3s;
             &:hover {
-              color: $color-purple-0;
+              color: $color-blue-0;
             }
             i {
               font-size: $fs-2 - 3;
@@ -150,13 +150,13 @@ header {
           }
           &:hover {
             span {
-              color: $color-purple-0;
+              color: $color-blue-0;
             }
             &::before {
-              background-color: $color-purple-0;
+              background-color: $color-blue-0;
             }
             &::after {
-              background-color: $color-purple-0;
+              background-color: $color-blue-0;
             }
           }
         }
