--- a/sass/Components/_card.scss
+++ b/sass/Components/_card.scss
@@ -7,6 +7,7 @@
     width: 100%;
     height: 65%;
     object-fit: contain;
+    transition: 0.5s;
   }
   .card-body {
     padding: 0;
@@ -39,6 +40,11 @@
       color: $color-gray-0;
       font-weight: $fw-2;
       text-decoration: line-through;
+    }
+  }
+  &:hover {
+    img {
+      transform: scale3d(1.1, 1.1, 1);
     }
   }
 }
