--- a/sass/Helpers/_variables.scss
+++ b/sass/Helpers/_variables.scss
@@ -7,6 +7,7 @@ $color-white-0: #fff;
 $color-white-1: #f3f5f7;
 $color-white-2: #e6e6e6;
 $color-white-3: rgba(255, 255, 255, 0.7);
+$color-white-4: #f7f7f7;
 $color-gray-0: #999;
 $color-yellow-0: #ffc750;
 $color-purple-0: #7755ff;
@@ -43,6 +44,8 @@ $pd-5: 10px;
 $pd-6: 130px;
 $pd-7: 35px;
 $pd-8: 40px;
+$pd-9: 30px;
+$pd-10: 75px;
 
 // margin
 $mg-0: 40px;
@@ -55,6 +58,7 @@ $mg-5: 15px;
 // border-radius
 $border-radius-0: 10px;
 $border-radius-1: 5px;
+$border-radius-2: 15px;
 
 // line-height
 $lh-0: 1.1;
