--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,6 +14,7 @@
 @import "./Layouts/cover";
 @import "./Layouts/commercial";
 @import "./Layouts/bestseller";
+@import "./Layouts/offer";
 
 // Components
 @import "./Components/button";
