code section featured and section news

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,10 +15,13 @@
 @import "./Layouts/commercial";
 @import "./Layouts/bestseller";
 @import "./Layouts/offer";
+@import "./Layouts/featured";
+@import "./Layouts/news";
 
 // Components
 @import "./Components/button";
 @import "./Components/card";
+@import "./Components/sectionText";
 
 // Pages
 
