--- a/css/main.css
+++ b/css/main.css
@@ -169,6 +169,33 @@ header .header__bottom .menu-list .menu-item .menu-link:hover::after {
   background-color: #1aaed7;
 }
 
+footer {
+  background-color: #111518;
+}
+footer .footer__content {
+  padding: 50px 0 30px;
+}
+footer .footer__content .footer__row {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+footer .footer__copyright {
+  background-color: #111518;
+  padding: 20px 0;
+}
+footer .footer__copyright .footer__lttin {
+  margin-bottom: 0;
+  color: #fff;
+  font-size: 14px;
+  text-align: center;
+  color: #999;
+}
+footer .footer__copyright .footer__lttin a {
+  text-decoration: none;
+  color: #1aaed7;
+}
+
 .cover {
   width: 100%;
   height: 734px;
@@ -423,6 +450,72 @@ header .header__bottom .menu-list .menu-item .menu-link:hover::after {
   width: 450px;
 }
 
+.featured {
+  background-color: #f7f7f7;
+  padding-bottom: 30px;
+}
+.featured .featured__content {
+  position: relative;
+}
+.featured .featured__content .featured__list {
+  padding: 15px;
+  background-color: #e6e6e6;
+  border-radius: 5px;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  row-gap: 10px;
+}
+
+.news {
+  background-color: #f7f7f7;
+  padding-bottom: 30px;
+}
+.news .news__content {
+  position: relative;
+}
+.news .news__content .news__list {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  row-gap: 20px;
+  column-gap: 20px;
+}
+.news .news__content .news__list .news__item {
+  color: #111518;
+}
+.news .news__content .news__list .news__detail {
+  display: flex;
+  background-color: #fff;
+  border-radius: 5px;
+}
+.news .news__content .news__list .news__detail .news__img {
+  width: 95%;
+  height: 157px;
+  object-fit: cover;
+}
+.news .news__content .news__list .news__detail .news__img img {
+  width: 100%;
+  height: 100%;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+.news .news__content .news__list .news__detail .news__info {
+  padding: 15px 15px 10px;
+}
+.news .news__content .news__list .news__detail .news__info .news__date {
+  font-size: 12px;
+  margin-bottom: 5px;
+  color: #18a0c6;
+}
+.news .news__content .news__list .news__detail .news__info .news__title {
+  font-size: 16px;
+  margin-bottom: 10px;
+}
+.news .news__content .news__list .news__detail .news__info .news__desc {
+  font-size: 14px;
+  margin-bottom: 0;
+  color: #999;
+}
+
 .btn--buy {
   padding: 15px 50px;
   background-color: #f3f5f7;
@@ -516,4 +609,22 @@ header .header__bottom .menu-list .menu-item .menu-link:hover::after {
 }
 .card:hover img {
   transform: scale3d(1.1, 1.1, 1);
+}
+
+.section-text {
+  font-size: 20px;
+  font-weight: 700;
+  color: #111518;
+  padding-bottom: 10px;
+  margin-bottom: 30px;
+  text-transform: capitalize;
+}
+.section-text::after {
+  content: "";
+  position: absolute;
+  top: 35px;
+  left: 0;
+  width: 50px;
+  height: 2px;
+  background-color: #18a0c6;
 }/*# sourceMappingURL=main.css.map */
