--- a/css/main.css
+++ b/css/main.css
@@ -17,10 +17,13 @@ body {
 }
 
 header {
+  width: 100%;
+  position: fixed;
+  z-index: 999;
   background-color: #111518;
 }
 header .header__top .gadgetsNavbar {
-  padding: 20px 0;
+  padding: 20px 0 10px;
 }
 header .header__top .gadgetsNavbar .navbar-brand img {
   width: 150px;
@@ -121,7 +124,7 @@ header .header__bottom .menu-list {
   list-style: none;
   margin: 0;
   justify-content: space-between;
-  padding: 10px 20px 20px;
+  padding: 10px 20px 15px;
 }
 header .header__bottom .menu-list .menu-item {
   display: flex;
@@ -173,12 +176,81 @@ footer {
   background-color: #111518;
 }
 footer .footer__content {
-  padding: 50px 0 30px;
+  padding: 75px 0;
 }
 footer .footer__content .footer__row {
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
+}
+footer .footer__content .footer__row h5 {
+  color: #fff;
+  font-size: 16px;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+}
+footer .footer__content .footer__row .footer__social .footer__logo {
+  margin-bottom: 20px;
+}
+footer .footer__content .footer__row .footer__social .footer__logo img {
+  width: 150px;
+}
+footer .footer__content .footer__row .footer__social .footer__contact {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  margin-bottom: 20px;
+}
+footer .footer__content .footer__row .footer__social .footer__contact li {
+  margin-bottom: 5px;
+  color: rgba(255, 255, 255, 0.7);
+}
+footer .footer__content .footer__row .footer__social .footer__contact li span {
+  color: #fff;
+  font-weight: 700;
+}
+footer .footer__content .footer__row .footer__social .footer__icon a {
+  text-decoration: none;
+  color: #111518;
+}
+footer .footer__content .footer__row .footer__social .footer__icon i {
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  line-height: 40px;
+  font-size: 18px;
+  background-color: #fff;
+  border-radius: 50%;
+  margin-right: 15px;
+}
+footer .footer__content .footer__row .footer__info ul,
+footer .footer__content .footer__row .footer__support ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+footer .footer__content .footer__row .footer__info ul li,
+footer .footer__content .footer__row .footer__support ul li {
+  margin-bottom: 5px;
+}
+footer .footer__content .footer__row .footer__info ul li a,
+footer .footer__content .footer__row .footer__support ul li a {
+  text-decoration: none;
+  color: rgba(255, 255, 255, 0.7);
+  transition: 0.2s;
+}
+footer .footer__content .footer__row .footer__info ul li a:hover,
+footer .footer__content .footer__row .footer__support ul li a:hover {
+  color: #fff;
+}
+footer .footer__content .footer__row .footer__payment .footer__img {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  row-gap: 10px;
+  column-gap: 5px;
+}
+footer .footer__content .footer__row .footer__payment .footer__img .img-item img {
+  width: 50px;
 }
 footer .footer__copyright {
   background-color: #111518;
@@ -198,8 +270,9 @@ footer .footer__copyright .footer__lttin a {
 
 .cover {
   width: 100%;
-  height: 734px;
+  height: 894px;
   background-color: #111518;
+  padding-top: 160px;
 }
 .cover .cover__content {
   padding-top: 50px;
@@ -486,6 +559,7 @@ footer .footer__copyright .footer__lttin a {
   display: flex;
   background-color: #fff;
   border-radius: 5px;
+  border: 1px solid #e3e3e3;
 }
 .news .news__content .news__list .news__detail .news__img {
   width: 95%;
