--- a/sass/Helpers/_variables.scss
+++ b/sass/Helpers/_variables.scss
@@ -9,6 +9,7 @@ $color-white-2: #e6e6e6;
 $color-white-3: rgba(255, 255, 255, 0.7);
 $color-white-4: #f7f7f7;
 $color-gray-0: #999;
+$color-gray-1: #e3e3e3;
 $color-yellow-0: #ffc750;
 $color-purple-0: #7755ff;
 $color-purple-1: #4923e6;
@@ -46,6 +47,7 @@ $pd-7: 35px;
 $pd-8: 40px;
 $pd-9: 30px;
 $pd-10: 75px;
+$pd-11: 160px;
 
 // margin
 $mg-0: 40px;
