--- a/sass/Layouts/_cover.scss
+++ b/sass/Layouts/_cover.scss
@@ -1,7 +1,8 @@
 .cover {
   width: 100%;
-  height: 734px;
+  height: 894px;
   background-color: $color-black-0;
+  padding-top: $pd-11;
   .cover__content {
     padding-top: $pd-3;
     position: relative;
