--- a/sass/Layouts/_news.scss
+++ b/sass/Layouts/_news.scss
@@ -15,6 +15,7 @@
         display: flex;
         background-color: $color-white-0;
         border-radius: $border-radius-1;
+        border: 1px solid $color-gray-1;
         .news__img {
           width: 95%;
           height: 157px;
