--- a/sass/Layouts/_header.scss
+++ b/sass/Layouts/_header.scss
@@ -116,7 +116,7 @@ header {
       list-style: none;
       margin: 0;
       justify-content: space-between;
-      padding: $pd-5 $pd-4 $pd-0;
+      padding: 0 $pd-4 $pd-5;
       .menu-item {
         display: flex;
         align-items: center;
