--- a/css/main.css
+++ b/css/main.css
@@ -124,7 +124,7 @@ header .header__bottom .menu-list {
   list-style: none;
   margin: 0;
   justify-content: space-between;
-  padding: 10px 20px 15px;
+  padding: 0 20px 10px;
 }
 header .header__bottom .menu-list .menu-item {
   display: flex;
@@ -561,18 +561,28 @@ footer .footer__copyright .footer__lttin a {
   border-radius: 5px;
   border: 1px solid #e3e3e3;
 }
+.news .news__content .news__list .news__detail:hover img {
+  transform: scale(1.075);
+}
+.news .news__content .news__list .news__detail:hover .news__title {
+  color: #18a0c6;
+}
 .news .news__content .news__list .news__detail .news__img {
-  width: 95%;
+  width: 39%;
   height: 157px;
   object-fit: cover;
+  overflow: hidden;
 }
 .news .news__content .news__list .news__detail .news__img img {
   width: 100%;
   height: 100%;
+  object-fit: cover;
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
+  transition: 0.5s;
 }
 .news .news__content .news__list .news__detail .news__info {
+  width: 61%;
   padding: 15px 15px 10px;
 }
 .news .news__content .news__list .news__detail .news__info .news__date {
@@ -583,6 +593,7 @@ footer .footer__copyright .footer__lttin a {
 .news .news__content .news__list .news__detail .news__info .news__title {
   font-size: 16px;
   margin-bottom: 10px;
+  transition: 0.5s;
 }
 .news .news__content .news__list .news__detail .news__info .news__desc {
   font-size: 14px;
@@ -640,7 +651,7 @@ footer .footer__copyright .footer__lttin a {
   width: 240px;
   height: 290px;
   margin-left: 5px;
-  padding: 10px 15px;
+  padding: 15px 20px 10px;
 }
 .card img {
   width: 100%;
@@ -659,6 +670,7 @@ footer .footer__copyright .footer__lttin a {
 }
 .card .card-body .card-discount {
   justify-content: space-between;
+  margin-top: 3px;
 }
 .card .card-body .card-discount .card-sale {
   padding: 2px 4px;
@@ -682,7 +694,7 @@ footer .footer__copyright .footer__lttin a {
   text-decoration: line-through;
 }
 .card:hover img {
-  transform: scale3d(1.1, 1.1, 1);
+  transform: scale(1.075);
 }
 
 .section-text {
