--- a/sass/Layouts/_news.scss
+++ b/sass/Layouts/_news.scss
@@ -16,18 +16,30 @@
         background-color: $color-white-0;
         border-radius: $border-radius-1;
         border: 1px solid $color-gray-1;
+        &:hover {
+          img {
+            transform: scale(1.075);
+          }
+          .news__title {
+            color: $color-blue-1;
+          }
+        }
         .news__img {
-          width: 95%;
+          width: 39%;
           height: 157px;
           object-fit: cover;
+          overflow: hidden;
           img {
             width: 100%;
             height: 100%;
+            object-fit: cover;
             border-top-left-radius: $border-radius-1;
             border-bottom-left-radius: $border-radius-1;
+            transition: 0.5s;
           }
         }
         .news__info {
+          width: 61%;
           padding: $pd-0 $pd-0 $pd-5;
           .news__date {
             font-size: $fs-4;
@@ -37,6 +49,7 @@
           .news__title {
             font-size: $fs-1;
             margin-bottom: $mg-2;
+            transition: 0.5s;
           }
           .news__desc {
             font-size: $fs-0;
