--- a/css/main.css
+++ b/css/main.css
@@ -713,4 +713,17 @@ footer .footer__copyright .footer__lttin a {
   width: 50px;
   height: 2px;
   background-color: #18a0c6;
+}
+
+.login {
+  background-color: #f7f7f7;
+  padding: 160px 0 30px;
+}
+.login .login__form {
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+}
+.login .login__form form {
+  background-color: #fff;
 }/*# sourceMappingURL=main.css.map */
