--- a/sass/main.scss
+++ b/sass/main.scss
@@ -22,8 +22,11 @@
 @import "./Components/button";
 @import "./Components/card";
 @import "./Components/sectionText";
+@import "./Components/formUser";
 
 // Pages
 @import "./Pages/login";
+@import "./Pages/register";
+@import "./Pages/forgotPassword";
 
 //Theme
