--- a/sass/Helpers/_variables.scss
+++ b/sass/Helpers/_variables.scss
@@ -16,7 +16,10 @@ $color-purple-1: #4923e6;
 $color-green-0: #09917f;
 $color-blue-0: #1aaed7;
 $color-blue-1: #18a0c6;
+$color-blue-2: rgba(24, 160, 198, 0.3);
+$color-blue-3: #3b5998;
 $color-red-0: #f77066;
+$color-red-1: #dd4c3b;
 
 // font-size
 $fs-0: 14px;
@@ -47,7 +50,7 @@ $pd-7: 35px;
 $pd-8: 40px;
 $pd-9: 30px;
 $pd-10: 75px;
-$pd-11: 160px;
+$pd-11: 150px;
 
 // margin
 $mg-0: 40px;
