create data.json for project, add img

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,7 +16,7 @@
 @import "./Layouts/bestseller";
 @import "./Layouts/offer";
 @import "./Layouts/featured";
-@import "./Layouts/news";
+@import "./Layouts/posts";
 
 // Components
 @import "./Components/button";
