--- a/css/main.css
+++ b/css/main.css
@@ -539,41 +539,41 @@ footer .footer__copyright .footer__lttin a {
   row-gap: 10px;
 }
 
-.news {
+.posts {
   background-color: #f7f7f7;
   padding-bottom: 30px;
 }
-.news .news__content {
+.posts .posts__content {
   position: relative;
 }
-.news .news__content .news__list {
+.posts .posts__content .posts__list {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   row-gap: 20px;
   column-gap: 20px;
 }
-.news .news__content .news__list .news__item {
+.posts .posts__content .posts__list .posts__item {
   color: #111518;
 }
-.news .news__content .news__list .news__detail {
+.posts .posts__content .posts__list .posts__detail {
   display: flex;
   background-color: #fff;
   border-radius: 5px;
   border: 1px solid #e3e3e3;
 }
-.news .news__content .news__list .news__detail:hover img {
+.posts .posts__content .posts__list .posts__detail:hover img {
   transform: scale(1.075);
 }
-.news .news__content .news__list .news__detail:hover .news__title {
+.posts .posts__content .posts__list .posts__detail:hover .posts__title {
   color: #18a0c6;
 }
-.news .news__content .news__list .news__detail .news__img {
+.posts .posts__content .posts__list .posts__detail .posts__img {
   width: 39%;
   height: 157px;
   object-fit: cover;
   overflow: hidden;
 }
-.news .news__content .news__list .news__detail .news__img img {
+.posts .posts__content .posts__list .posts__detail .posts__img img {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -581,21 +581,21 @@ footer .footer__copyright .footer__lttin a {
   border-bottom-left-radius: 5px;
   transition: 0.5s;
 }
-.news .news__content .news__list .news__detail .news__info {
+.posts .posts__content .posts__list .posts__detail .posts__info {
   width: 61%;
   padding: 15px 15px 10px;
 }
-.news .news__content .news__list .news__detail .news__info .news__date {
+.posts .posts__content .posts__list .posts__detail .posts__info .posts__date {
   font-size: 12px;
   margin-bottom: 5px;
   color: #18a0c6;
 }
-.news .news__content .news__list .news__detail .news__info .news__title {
+.posts .posts__content .posts__list .posts__detail .posts__info .posts__title {
   font-size: 16px;
   margin-bottom: 10px;
   transition: 0.5s;
 }
-.news .news__content .news__list .news__detail .news__info .news__desc {
+.posts .posts__content .posts__list .posts__detail .posts__info .posts__desc {
   font-size: 14px;
   margin-bottom: 0;
   color: #999;
