--- a/sass/Layouts/_posts.scss
+++ b/sass/Layouts/_posts.scss
@@ -1,17 +1,17 @@
-.news {
+.posts {
   background-color: $color-white-4;
   padding-bottom: $pd-9;
-  .news__content {
+  .posts__content {
     position: relative;
-    .news__list {
+    .posts__list {
       display: grid;
       grid-template-columns: repeat(2, 1fr);
       row-gap: 20px;
       column-gap: 20px;
-      .news__item {
+      .posts__item {
         color: $color-black-0;
       }
-      .news__detail {
+      .posts__detail {
         display: flex;
         background-color: $color-white-0;
         border-radius: $border-radius-1;
@@ -20,11 +20,11 @@
           img {
             transform: scale(1.075);
           }
-          .news__title {
+          .posts__title {
             color: $color-blue-1;
           }
         }
-        .news__img {
+        .posts__img {
           width: 39%;
           height: 157px;
           object-fit: cover;
@@ -38,20 +38,20 @@
             transition: 0.5s;
           }
         }
-        .news__info {
+        .posts__info {
           width: 61%;
           padding: $pd-0 $pd-0 $pd-5;
-          .news__date {
+          .posts__date {
             font-size: $fs-4;
             margin-bottom: $mg-4;
             color: $color-blue-1;
           }
-          .news__title {
+          .posts__title {
             font-size: $fs-1;
             margin-bottom: $mg-2;
             transition: 0.5s;
           }
-          .news__desc {
+          .posts__desc {
             font-size: $fs-0;
             margin-bottom: 0;
             color: $color-gray-0;
