create page detail product

--- a/css/main.css
+++ b/css/main.css
@@ -882,4 +882,8 @@ footer .footer__copyright .footer__lttin a {
   text-decoration: none;
   font-weight: 500;
   color: #18a0c6;
+}
+
+.productIntro {
+  padding-top: 130px;
 }/*# sourceMappingURL=main.css.map */
