--- a/sass/main.scss
+++ b/sass/main.scss
@@ -28,5 +28,6 @@
 @import "./Pages/login";
 @import "./Pages/register";
 @import "./Pages/forgotPassword";
+@import "./Pages/detailProduct";
 
 //Theme
