code page detail product

--- a/sass/Layouts/_footer.scss
+++ b/sass/Layouts/_footer.scss
@@ -96,6 +96,7 @@ footer {
       a {
         text-decoration: none;
         color: $color-blue-0;
+        font-weight: $fw-2;
       }
     }
   }
