--- a/css/main.css
+++ b/css/main.css
@@ -266,6 +266,7 @@ footer .footer__copyright .footer__lttin {
 footer .footer__copyright .footer__lttin a {
   text-decoration: none;
   color: #1aaed7;
+  font-weight: 500;
 }
 
 .cover {
@@ -886,4 +887,141 @@ footer .footer__copyright .footer__lttin a {
 
 .productIntro {
   padding-top: 130px;
+  background-color: #f7f7f7;
+}
+.productIntro .productIntro__navBar ul {
+  list-style: none;
+  padding: 10px 0;
+  margin: 0;
+  display: flex;
+}
+.productIntro .productIntro__navBar ul li {
+  margin-right: 30px;
+  position: relative;
+}
+.productIntro .productIntro__navBar ul li a {
+  font-size: 14px;
+  text-decoration: none;
+  color: #999;
+  transition: 0.2s;
+}
+.productIntro .productIntro__navBar ul li a:hover {
+  color: #111518;
+}
+.productIntro .productIntro__navBar ul li a::after {
+  content: "";
+  border: 4px solid transparent;
+  border-color: transparent #18a0c6 #18a0c6 transparent;
+  position: absolute;
+  bottom: 6px;
+  right: -15px;
+}
+.productIntro .productIntro__info {
+  background-color: #fff;
+  padding: 15px 0;
+  height: 450px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.productIntro .productIntro__info .row {
+  width: 100%;
+}
+.productIntro .productIntro__info .row .col-5,
+.productIntro .productIntro__info .row .col-7 {
+  padding: 0 20px;
+}
+.productIntro .productIntro__info .productIntro__slick {
+  position: relative;
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+}
+.productIntro .productIntro__info .productIntro__slick .productIntro__promotion {
+  position: absolute;
+  top: 3px;
+  left: 85px;
+  padding: 3px 15px;
+  font-size: 13px;
+  border-radius: 5px;
+  color: #fff;
+  background-color: #18a0c6;
+  font-weight: 600;
+  z-index: 2;
+}
+.productIntro .productIntro__info .productIntro__slick .productIntro__nav {
+  width: 70px;
+  display: flex;
+  align-items: center;
+  margin-right: 30px;
+}
+.productIntro .productIntro__info .productIntro__slick .productIntro__nav .slick-next,
+.productIntro .productIntro__info .productIntro__slick .productIntro__nav .slick-prev {
+  width: 70px;
+  height: 30px;
+  background-color: #f7f7f7;
+  border-radius: 5px;
+  transition: 0.3s;
+}
+.productIntro .productIntro__info .productIntro__slick .productIntro__nav .slick-next:hover,
+.productIntro .productIntro__info .productIntro__slick .productIntro__nav .slick-prev:hover {
+  background-color: #e6e6e6;
+}
+.productIntro .productIntro__info .productIntro__slick .productIntro__nav .slick-prev {
+  top: 7px;
+  left: 0px;
+  z-index: 2;
+}
+.productIntro .productIntro__info .productIntro__slick .productIntro__nav .slick-prev::before {
+  content: "";
+  background-image: url(../../img/btn-up.png);
+  display: inline-block;
+  width: 18px;
+  height: 18px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.productIntro .productIntro__info .productIntro__slick .productIntro__nav .slick-next {
+  top: unset;
+  bottom: -25px;
+  right: 0px;
+}
+.productIntro .productIntro__info .productIntro__slick .productIntro__nav .slick-next::before {
+  content: "";
+  background-image: url(../../img/btn-down.png);
+  display: inline-block;
+  width: 18px;
+  height: 18px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.productIntro .productIntro__info .productIntro__slick .productIntro__nav .slick-list {
+  padding: 0 !important;
+  height: 350px !important;
+}
+.productIntro .productIntro__info .productIntro__slick .productIntro__nav .nav--item {
+  height: 70px;
+}
+.productIntro .productIntro__info .productIntro__slick .productIntro__nav .nav--item .item--img {
+  width: 70px;
+  height: 70px;
+}
+.productIntro .productIntro__info .productIntro__slick .productIntro__nav .nav--item .item--img img {
+  width: 100%;
+  height: 100%;
+}
+.productIntro .productIntro__info .productIntro__slick .productIntro__slide {
+  width: 390px;
+  height: 390px;
+  overflow: hidden;
+}
+.productIntro .productIntro__info .productIntro__slick .productIntro__slide .slide--item a {
+  width: 390px;
+  height: 390px;
+}
+.productIntro .productIntro__info .productIntro__slick .productIntro__slide .slide--item a img {
+  width: 100%;
+  height: 100%;
 }/*# sourceMappingURL=main.css.map */
