--- a/sass/Helpers/_variables.scss
+++ b/sass/Helpers/_variables.scss
@@ -10,6 +10,7 @@ $color-white-3: rgba(255, 255, 255, 0.7);
 $color-white-4: #f7f7f7;
 $color-gray-0: #999;
 $color-gray-1: #e3e3e3;
+$color-gray-2: #e6e6e6;
 $color-yellow-0: #ffc750;
 $color-purple-0: #7755ff;
 $color-purple-1: #4923e6;
